<package>
  <name>ecto_opencv</name>
  <version>0.7.0</version>
  <description>Ecto bindings for common opencv functionality.</description>
  <author>Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://plasmodic.github.io/ecto_opencv</url>

  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>opencv_candidate</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>opencv_candidate</run_depend>

  <test_depend>rosunit</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
